--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 	"dependencies": {
 		"@fontsource/jetbrains-mono": "^5.0.20",
 		"@fontsource/manrope": "^5.0.20",
+		"@vercel/analytics": "^1.3.1",
+		"@vercel/speed-insights": "^1.0.12",
 		"katex": "^0.16.11",
 		"lucide-svelte": "^0.427.0",
 		"open-props": "^1.7.5",
